# stackpy

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_PACKAGES.md  Makefile  README.md  SETUP_AUTOMATION.md  environment.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-branch-manual-release.yml  ci-branch-pr.yml  ci-main-auto-release.yml  merge.yml  pr.yml  publish.yml
src/stackpy/: generator.py
tests/: test_prime.py
